--- a/CombatMeter/CombatMeter.csproj
+++ b/CombatMeter/CombatMeter.csproj
@@ -56,6 +56,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="PeriodicTask.cs" />
     <Compile Include="CombatList.cs" />
     <Compile Include="DamageEntry.cs" />
     <Compile Include="ExitEntry.cs" />
